fixed margin spacing on card selector

--- a/client/src/components/CardSelection.module.css
+++ b/client/src/components/CardSelection.module.css
@@ -4,8 +4,7 @@
   width: 40%;
   max-width: 40%;
   outline: none;
-  margin: 0 2%;
-  margin-right: 0;
+  margin: 0;
   padding: 0 5% 0 1%;
   border: 3px #646c80 solid;
   border-radius: 8px;
